items-service/deployment/k8s/templates/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: items-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    svc: items-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-service
  labels:
    svc: items-service
spec:
  selector:
    matchLabels:
      svc: items-service
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        svc: items-service
    spec:
      containers:
        - name: items-service
          image: @project.groupId@/@project.artifactId@:@project.version@
          imagePullPolicy: IfNotPresent        
          ports:
            - containerPort: 8080
              name: httpport
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 10
            failureThreshold: 5
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: items-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /api/items
          pathType: Prefix
          backend:
            service:
              name: items-service
              port:
                number: 8080
